make modal scrollable and fix overflow

--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -103,3 +103,8 @@ input {
     border: none;
     border-radius: 8px;
 }
+
+.modal {
+    max-height: 80%;
+    overflow-y: scroll;
+}
